Add ability to release the vscode extension (#23)
* Add ability to release the vscode extension.

* Add logo.

* Add mention of icon.

Co-authored-by: Vlad A. Ionescu <vladaionescu@users.noreply.github.com>

--- a/earthfile-syntax-highlighting/package.json
+++ b/earthfile-syntax-highlighting/package.json
@@ -2,8 +2,13 @@
     "name": "earthfile-syntax-highlighting",
     "displayName": "Earthfile Syntax Highlighting",
     "description": "Syntax highlighting for Earthly build earthfiles (build.earth).",
-    "version": "0.0.1",
-    "publisher": "vladaionescu",
+    "version": ":VERSION:",
+    "publisher": "earthly",
+    "icon": "logo.png",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/vladaionescu/earthly.git"
+    },
     "engines": {
         "vscode": "^1.43.0"
     },
