Finalize org transfer vladaionescu -> earthly (#62)
* vladaionescu -> earthly

* Lint.

* Missed a few.

Co-authored-by: Vlad A. Ionescu <vladaionescu@users.noreply.github.com>

--- a/earthfile-syntax-highlighting/package.json
+++ b/earthfile-syntax-highlighting/package.json
@@ -7,7 +7,7 @@
     "icon": "logo.png",
     "repository": {
         "type": "git",
-        "url": "https://github.com/vladaionescu/earthly.git"
+        "url": "https://github.com/earthly/earthly.git"
     },
     "engines": {
         "vscode": "^1.43.0"
