Add support for HEALTHCHECK (#97)
* Add support for HEALTHCHECK.

* Add docs.

Co-authored-by: Vlad A. Ionescu <vladaionescu@users.noreply.github.com>

--- a/earthfile-syntax-highlighting/package.json
+++ b/earthfile-syntax-highlighting/package.json
@@ -2,7 +2,7 @@
     "name": "earthfile-syntax-highlighting",
     "displayName": "Earthfile Syntax Highlighting",
     "description": "Syntax highlighting for Earthly build earthfiles (build.earth).",
-    "version": ":VERSION:",
+    "version": "0.0.0",
     "publisher": "earthly",
     "icon": "logo.png",
     "repository": {
