Rename build.earth to Earthfile (#109)
* Renaming build.earth to Earthfile.

* Fix bug with git build context.

Co-authored-by: Vlad A. Ionescu <vladaionescu@users.noreply.github.com>

--- a/earthfile-syntax-highlighting/package.json
+++ b/earthfile-syntax-highlighting/package.json
@@ -1,7 +1,7 @@
 {
     "name": "earthfile-syntax-highlighting",
     "displayName": "Earthfile Syntax Highlighting",
-    "description": "Syntax highlighting for Earthly build earthfiles (build.earth).",
+    "description": "Syntax highlighting for Earthly build Earthfiles.",
     "version": "0.0.0",
     "publisher": "earthly",
     "icon": "logo.png",
@@ -19,7 +19,7 @@
         "languages": [{
             "id": "earthfile",
             "aliases": ["Earthfile", "earthfile"],
-            "extensions": [".earth"],
+            "extensions": [".earth", ".Earthfile", "Earthfile"],
             "configuration": "./language-configuration.json"
         }],
         "grammars": [{
