--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "icon": "logo.png",
     "repository": {
         "type": "git",
-        "url": "https://github.com/earthly/earthly.git"
+        "url": "https://github.com/earthly/earthfile-grammar.git"
     },
     "engines": {
         "vscode": "^1.43.0"
